--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "react-scripts": "0.2.2"
   },
   "dependencies": {
+    "d3": "^4.2.2",
+    "immutable": "^3.8.1",
+    "lodash": "^4.15.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1"
   },
