--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "immutable": "^3.8.1",
     "lodash": "^4.15.0",
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "react-motion": "^0.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
