--- a/package.json
+++ b/package.json
@@ -2,19 +2,25 @@
   "name": "code2resume",
   "version": "0.0.1",
   "private": true,
+  "compiler_babel" : { "cacheDirectory" : "/tmp" },
   "devDependencies": {
-    "react-scripts": "^0.3.0"
+    "react-scripts": "^0.3.0",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.1.1",
+    "redux-logger": "^2.7.4"
   },
   "dependencies": {
     "d3": "^4.2.2",
     "immutable": "^3.8.1",
-    "lodash": "^4.15.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-motion": "^0.4.4"
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
