--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-node_modules
+node_modules/
 
 # production
-build
+build/
 
 # misc
 .DS_Store
