--- a/layouts/common.yml
+++ b/layouts/common.yml
@@ -5,6 +5,10 @@ services:
     container_name: skillviz
     build: 
       context: ../services/skillviz
+      args:
+        REACT_APP_GITHUB_APP_CLIENT_ID: "${GITHUB_APP_CLIENT_ID}"
     image: skillviz 
     expose:
       - "9000"
+    environment:
+      REACT_APP_GITHUB_APP_CLIENT_ID: "${GITHUB_APP_CLIENT_ID}"
