--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "redux-thunk": "^2.1.0"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
