--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "d3": "^4.2.2",
+    "humps": "^2.0.0",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
+    "normalizr": "^3.1.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-saga": "^0.14.3",
     "redux-thunk": "^2.1.0"
   },
   "scripts": {
