--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "normalizr": "^3.1.0",
+    "rc-progress": "^2.0.6",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
